# your-daily-podcaster

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONFIGURATION.md  Makefile  README.md  metadata_2025-07-28.json  metadata_2025-07-29.json  metadata_2025-07-30.json  metadata_2025-07-31.json  podcast.xml  pyproject.toml  requirements.txt  whyThisProject.md
.github/workflows/: daily_run.yml
data/: Topics.md
test/: README.md  __init__.py  test_date_based_processing.py  test_run_pipeline.py  test_scraper_fetch_search_results.py  test_scraper_scrape_articles.py  test_step_by_step.py  test_summarizer_summarize_articles.py  test_tts_generate_audio.py  test_utils_browser.py  test_utils_db.py  test_utils_logger.py  test_utils_time.py  test_utils_user_agent.py
yourdaily/: __init__.py  run_pipeline.py
yourdaily/cleaner/: __init__.py  cleanup.py
yourdaily/publisher/: __init__.py  publish_to_spotify.py
yourdaily/scraper/: __init__.py  fetch_search_results.py  scrape_articles.py
yourdaily/summarizer/: summarize_articles.py
yourdaily/tts/: __init__.py  generate_audio.py
yourdaily/utils/: __init__.py  browser.py  data_manager.py  db.py  logger.py  rss_generator.py  time.py  user_agent.py
